Page content max width set to 100vw to prevent overflowing on mobile. Changed grey background to lighter shade (same as Collapse), added border to PageHeader (and changed page content borders to be same colour as Card borders).

--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,28 @@ html, body, #root, #root>div {
 
 .page-content {
     min-height: 100vh;
-    border: 1px solid #EEEEEE;
+    max-width: 100vw;
+    border: 1px solid #e8e8e8;
     border-top-width: 0;
     border-bottom-width: 0;
     border-left-width: 1px;
     border-right-width: 1px;
+}
+
+.page-content .ant-page-header {
+    border: 1px solid #e8e8e8;
+    border-top-width: 0;
+    border-bottom-width: 1px;
+    border-left-width: 0;
+    border-right-width: 0;
+}
+
+.page-content .ant-layout {
+    background: #fafafa;
+}
+
+.page-content .ant-layout-footer {
+    background: none;
 }
 
 .home .page-content {
